--- a/Visualization/frond_end.html
+++ b/Visualization/frond_end.html
@@ -71,7 +71,7 @@
         <h2>2. 按电影名称查询</h2>
         <div class="query-group">
             <label for="movie-title">电影名称：</label>
-            <input type="text" id="movie-title" placeholder="如：Marvel's The Avengers">
+            <input type="text" id="movie-title" placeholder="如：The Avengers">
             <button onclick="runQuery('title')">查询</button>
         </div>
     </div>
@@ -138,107 +138,147 @@
         </div>
     </div>
 
+    <!-- 组合查询 -->
+    <div class="query-section">
+        <h2>8. 组合查询</h2>
+        <div class="query-group">
+            <label for="combine-query">选择组合查询：</label>
+            <select id="combine-query">
+                <option value="actor-movies-year">某演员在某年参演了多少部电影</option>
+                <option value="actor-movies-genre">某演员一共演了多少部某类型的电影</option>
+            </select>
+            <input type="text" id="actor-name-combine" placeholder="演员名称 (如：Andrew Garfield)">
+            <input type="text" id="genre-combine" placeholder="电影类型 (如：Action)">
+            <input type="number" id="year-combine" placeholder="年份 (如：2012)">
+            <button onclick="runQuery('combine')">查询</button>
+        </div>
+    </div>
+
+    <!-- 查询结果展示 -->
     <!-- 查询结果展示 -->
     <div class="results" id="results">
         <h3>查询结果：</h3>
         <pre id="query-output">暂无结果</pre>
+        <h3>执行时间对比：</h3>
+        <table id="time-comparison" border="1">
+            <thead>
+                <tr>
+                    <th>数据库</th>
+                    <th>执行时间 (ms)</th>
+                    <th>查询结果</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- 动态插入 -->
+            </tbody>
+        </table>
     </div>
 </div>
 
 <script>
-    async function runQuery(type) {
-        const output = document.getElementById('query-output');
-        let query = '';
-        // 获取开始时间
-        const startTime = performance.now();
-        try {
-            switch (type) {
-                case 'time':
-                    const timeType = document.getElementById('time-query').value;
-                    const year = document.getElementById('year').value || '2020';
-                    const month = document.getElementById('month').value || '1';
-                    const quarter = document.getElementById('quarter').value || '1';
-                    if (timeType === 'year') {
-                        query = `MATCH (m:Movies) WHERE m.Year = ${year} RETURN count(m) AS movies_in_${year}`;
-                    } else if (timeType === 'month') {
-                        query = `MATCH (m:Movies) WHERE m.Year = ${year} AND m.Month = ${month} RETURN count(m) AS movies_in_${year}_${month}`;
-                    } else if (timeType === 'quarter') {
-                        const startMonth = 1 + (quarter - 1) * 3;
-                        const endMonth = startMonth + 2;
-                        query = `MATCH (m:Movies) WHERE m.Year = ${year} AND m.Month >= ${startMonth} AND m.Month <= ${endMonth} RETURN count(m) AS movies_in_q${quarter}_${year}`;
-                    } else if (timeType === 'weekday') {
-                        query = `MATCH (m:Movies) WHERE m.Year = 2004 AND m.Month = 1 AND m.Day = 20 RETURN count(m) AS movies_on_tuesday_1_20_2004`;
-                    }
-                    break;
-                case 'title':
-                    const title = document.getElementById('movie-title').value;
-                    query = `MATCH (m:Movies)-[:HAS_FORMAT]->(f:Formats) WHERE m.Movie_Title = "${title}" RETURN count(DISTINCT f) AS versions_of_Movie`;
-                    break;
-                case 'director':
-                    const director = document.getElementById('director-name').value;
-                    query = `MATCH (d:Directors)-[:DIRECT]->(m:Movies) WHERE d.Director_Name = "${director}" RETURN count(m) AS movies_directed_by_${director.last}`;
-                    break;
-                case 'actor':
-                    const actorType = document.getElementById('actor-query').value;
-                    const actorName = document.getElementById('actor-name').value;
-                    if (actorType === 'star') {
-                        query = `MATCH (a:Actors)-[:STAR]->(m:Movies) WHERE a.Actor_Name = "${actorName}" RETURN count(DISTINCT m) AS movies_stared_by_${actorName.last}`;
-                    } else if (actorType === 'act') {
-                        query = `MATCH (a:Actors)-[:ACT]->(m:Movies) WHERE a.Actor_Name = "${actorName}" RETURN count(DISTINCT m) AS movies_acted_by_${actorName.last}`;
-                    }
-                    break;
-                case 'genre':
-                    const genre = document.getElementById('genre').value;
-                    query = `MATCH (m:Movies)-[:HAS_GENRE]->(g:Genres) WHERE g.Genre = "${genre}" RETURN count(m) AS ${genre}_movies_count`;
-                    break;
-                case 'rating':
-                    const ratingType = document.getElementById('rating-query').value;
-                    const score = document.getElementById('score').value || '3';
-                    if (ratingType === 'score-above') {
-                        query = `MATCH (m:Movies) WHERE m.Average_Score > ${score} RETURN count(*)`;
-                    } else if (ratingType === 'positive') {
-                        query = `MATCH (m:Movies)-[:HAS_REVIEW]->(r:Reviews) WHERE r.Score = 5 RETURN DISTINCT m.Movie_Title AS positive_review_movies`;
-                    }
-                    break;
-                case 'relation':
-                    const relation = document.getElementById('relationship').value;
-                    if (relation === 'actors') {
-                        query = `MATCH (a1:Actors)-[r:COOPERATED]-(a2:Actors) WHERE r.count > 20 RETURN a1.Actor_Name, a2.Actor_Name, r.count ORDER BY r.count DESC LIMIT 1;`;
-                    } else if (relation === 'directors') {
-                        query = `MATCH (a:Actors)-[r:COOPERATED_WITH_DIRECTOR]->(d:Directors) WHERE r.count > 20 RETURN a.Actor_Name AS Actor, d.Director_Name AS Director, r.count AS Collaborations ORDER BY r.count DESC LIMIT 2;`;
-                    } else if (relation === 'pair') {
-                        query = `MATCH (m:Movies)-[:HAS_GENRE]->(g:Genres) WHERE g.Genre = 'Action' WITH m MATCH (a1:Actors)-[:ACT]->(m)<-[:ACT]-(a2:Actors) WHERE a1.Actor_ID < a2.Actor_ID WITH a1, a2, sum(m.Reviews_Count) AS total_reviews RETURN a1.Actor_Name AS Actor1, a2.Actor_Name AS Actor2, total_reviews ORDER BY total_reviews DESC LIMIT 1;`;
-                    }
-                    break;
-            }
-            output.textContent = query || '请输入有效数据！';
-            // 发送查询请求到后端
-
-            // 请求后端执行查询
-            const response = await fetch('http://localhost:3000/query', {
-                method: 'POST',
-                headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({query}),
-            });
-
-            const result = await response.json();
-
-            // 获取结束时间
-            const endTime = performance.now();
-            const timeElapsed = (endTime - startTime).toFixed(2); // 保留两位小数
-
-            if (result.success) {
-                if (document.getElementById('relationship').value === "directors") {
-                    output.textContent = `查询结果:\n${JSON.stringify(result.data[1], null, 2)}\n查询耗时: ${timeElapsed} ms`;
-                } else {
-                    output.textContent = `查询结果:\n${JSON.stringify(result.data, null, 2)}\n查询耗时: ${timeElapsed} ms`;
-                }
-            } else {
-                output.textContent = `查询失败: ${result.error}`;
-            }
-        } catch (error) {
-            output.textContent = `请求失败: ${error.message}`;
+    function prepareQueryPayload(queryType) {
+        const payload = { queryType, parameters: {} };
+        switch (queryType) {
+            case 'time':
+                payload.parameters = {
+                    timeType: document.getElementById('time-query').value,
+                    year: document.getElementById('year').value || null,
+                    month: document.getElementById('month').value || null,
+                    quarter: document.getElementById('quarter').value || null,
+                };
+                break;
+            case 'title':
+                payload.parameters = { title: document.getElementById('movie-title').value };
+                break;
+            case 'director':
+                payload.parameters = { director: document.getElementById('director-name').value };
+                break;
+            case 'actor':
+                payload.parameters = {
+                    actorType: document.getElementById('actor-query').value,
+                    actorName: document.getElementById('actor-name').value,
+                };
+                break;
+            case 'genre':
+                payload.parameters = { genre: document.getElementById('genre').value };
+                break;
+            case 'rating':
+                payload.parameters = {
+                    ratingType: document.getElementById('rating-query').value,
+                    score: document.getElementById('score').value || null,
+                };
+                break;
+            case 'relation':
+                payload.parameters = { relation: document.getElementById('relationship').value };
+                break;
+            case 'combine':
+                payload.parameters = {
+                    combineQuery: document.getElementById('combine-query').value,
+                    actorName: document.getElementById('actor-name-combine').value || null,
+                    genre: document.getElementById('actor-name-genre').value || null,
+                    year: document.getElementById('year-combine').value || null,
+                };
+                break;
         }
+        return payload;
+    }
+
+    function runQuery(queryType) {
+        const output = document.getElementById('query-output');
+        const timeComparisonTable = document.getElementById('time-comparison').querySelector('tbody');
+
+        // 清空结果
+        output.textContent = '查询中，请稍候...';
+        timeComparisonTable.innerHTML = '';
+
+        const payload = prepareQueryPayload(queryType);
+
+        // 创建 SSE 连接
+        const queryParams = new URLSearchParams({
+            queryType: queryType,
+            parameters: JSON.stringify(payload.parameters)  // 将参数序列化为 JSON 字符串
+        });
+        const eventSource = new EventSource(`http://127.0.0.1:5000/compare-query-stream?${queryParams}`);
+
+        // 监听 SSE 消息
+        eventSource.onmessage = (event) => {
+            try {
+                const result = JSON.parse(event.data);
+
+                // 动态更新表格
+                const row = document.createElement('tr');
+                if (payload.queryType == "relation" && payload.parameters.relation == "directors") {
+                    row.innerHTML = `
+                        <td>${result.database}</td>
+                        <td>${result.time !== null ? `${result.time} ms` : '查询失败'}</td>
+                        <td>${Array.isArray(result.queryResult) ? JSON.stringify(result.queryResult[1]) : result.queryResult}</td>
+                    `;
+                } else {
+                    row.innerHTML = `
+                        <td>${result.database}</td>
+                        <td>${result.time !== null ? `${result.time} ms` : '查询失败'}</td>
+                        <td>${Array.isArray(result.queryResult) ? JSON.stringify(result.queryResult) : result.queryResult}</td>
+                    `;
+                }
+                timeComparisonTable.appendChild(row);
+            } catch (error) {
+                console.error('JSON 解析错误:', error);
+                output.textContent = '数据格式错误，请检查服务器响应。';
+                eventSource.close();
+            }
+        };
+
+        // 监听错误
+        eventSource.onerror = (event) => {
+            console.error('SSE error:', event);
+            output.textContent = `请求失败，请检查网络或服务器：${event.target.readyState === EventSource.CLOSED ? '连接已关闭' : '未知错误'}`;
+            eventSource.close();
+        };
+
+        // 监听连接关闭
+        eventSource.onclose = () => {
+            console.log('SSE 连接已关闭');
+        };
     }
 </script>
 </body>
